color stuff and server stuff.